# CMA-lib-integrated-marketplace-rs

marketplace_v1.5/: .dockerignore  Cargo.toml  Dockerfile  execution_script.js  local-lib.txt  package.json
marketplace_v1.5/.cargo/: config.toml
marketplace_v1.5/lib/cma-rust-parser/: STRUCTURE.md
marketplace_v1.5/lib/cma-rust-parser/src/: helpers.rs
marketplace_v1.5/src/: main.rs
marketplace_v2/: .gitignore  Cargo.toml  Dockerfile  execution_script.js  package-lock.json
marketplace_v2/lib/cma-rust-parser/: Cargo.toml  README.md  STRUCTURE.md
marketplace_v2/lib/cma-rust-parser/src/: parser.rs
marketplace_v2/lib/cma-rust-parser/tests/: parser_tests.rs
marketplace_v2/src/: main.rs
