[package]
name = "dapp"
version = "0.1.0"
edition = "2021"

[dependencies]
json = "0.12"
hyper = { version = "0.14", features = ["http1", "runtime", "client"] }
tokio = { version = "1.32", features = ["macros", "rt-multi-thread"] }
hex = "0.4.3"
cma-rust-parser = { package = "libcma_binding_rust", git = "https://github.com/Mugen-Builders/libcma_binding_rust", branch = "main" }
ethers-core = "1.0.0"
